--- a/new.html
+++ b/new.html
@@ -30,7 +30,7 @@
         div#resizabl21 {
     gap: 4px;
 }
-div#contur11 {
+div#contur1s1 {
     background-color: white;
     color: #333;
     border: 1px solid #efefef;
@@ -38,7 +38,7 @@ div#contur11 {
     margin-bottom: 1rem;
     padding: 1rem;
     margin-block-start: 0.5rem;
-    height: 320px;
+    height: 340px;
 }
 }
       iframe {
