--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from wizixo.webestica.com/documentation/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Feb 2022 12:40:14 GMT -->
 <head>
-    <title>Wizixo | Documentation </title>
+    <title>Master CSS Grid & Build Great Layouts</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
