--- a/new.html
+++ b/new.html
@@ -8,8 +8,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
-    <meta name="description" content="Wizixo Documentation ">
-    <meta name="author" content="webestica">    
+    <meta property="og:title" content="Master CSS Grid & Build Great Layouts">
+<meta property="og:type" content="article" />
+<meta property="og:description" content="CSS Grid is an indispensable concept that every excellent web developer should master!
+
+While it might often look and feel more complicated to use compared to other layout systems like Flexbox, it's actually very straight-forward and simple to use once you get a hold of the syntax behind it and some of the core functionalities it offers!
+
+Using grid can save you from creating cumbersome flex layouts with lots of containers, and also from using media queries in many cases! Besides that, you also get to feel like a CSS ninja when your grid does what you want it to do!">
+<meta property="og:image" content="https://raw.githubusercontent.com/Patel-world/logy/main/wizixo.webestica.com/documentation/images/qwerty.jpg">
+<meta property="og:url" content="https://adhyapna.com/master-css-grid-and-build-great-layouts/">
+    
     <link rel="shortcut icon" href="https://aeitso.com/static/apple-touch-icon.png">
 	<link rel="apple-touch-icon" href="/static/images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="https://aeitso.com/static/favicon-32x32.png">
