--- a/new.html
+++ b/new.html
@@ -537,7 +537,7 @@ document.querySelector("#edit-section > div > pre:nth-child(16)").innerHTML=`<pr
 ">
          <input class="form-control" type="email" placeholder="Email" style="
    margin-block-end: 1rem;
-"><textarea class="form-control" rows="5" placeholder="Example textarea" style="
+"><textarea class="form-control" rows="5" placeholder="Write something here..." style="
    margin-block-end: 1rem;
    height: 7rem;
 "></textarea><button onclick="checkOutFormValidation()" class="btn btn-grad" style="
