--- a/new.html
+++ b/new.html
@@ -280,7 +280,7 @@ document.querySelector("#edit-section > div > pre:nth-child(16)").innerHTML=`<pr
               </ol></p>
           </div>
         </div>
-        <p class="mt-4"><span class="badge badge-danger mr-2">Note:</span>Try to resize the colorful boxes and container(drag your cursor at the bottom end of whatever you want to resize and drag) and observe the behaviour of grid,, this is the best way understand what happend when content overflow or underflow.</p>
+        <p class="mt-4"><span class="badge badge-danger mr-2">Note:</span>Try to resize the colorful boxes and container(drag your cursor at the bottom end of whatever you want to resize and drag) and observe the behaviour of grid,, this is the best way to understand what happend when content overflow or underflow.</p>
   
         <!-- CSS Method -->
         <h2 id="elements-slider" class="mt-5 mb-3">Using The Fraction (fr) Unit</h2>
@@ -679,7 +679,7 @@ document.querySelector("#edit-section > div > pre:nth-child(16)").innerHTML=`<pr
 						<p>Aww yeah, We found the review you had left about us on the internet. We were absolutely overwhelmed to see the wonderful things that you had to say about us. 
 					</div>`;
 		party.confetti(runButton, {
-	count: party.variation.range(20, 40),
+	count: party.variation.range(100, 40),
 });
         }
 
