--- a/new.html
+++ b/new.html
@@ -276,7 +276,7 @@ document.querySelector("#edit-section > div > pre:nth-child(16)").innerHTML=`<pr
               <p class="text-dark mt-3"><ol>
                 <li>Use display: grid on the parent (container) element</li>
                 <li>Use the grid-template-columns property in order to specify that our grid will contain three columns of fixed width</li>
-                <li>Use the gap property to add an equal lem gap between both the rows and the columns of the grid</li>
+                <li>Use the gap property to add an equal 1em gap between both the rows and the columns of the grid</li>
               </ol></p>
           </div>
         </div>
